[package]
name = "simplets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.27.0"
sha2 = "0.10.2"
hex = "0.4.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5.0-rc.2", default-features = false, features = ["secrets"] }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
default-features = false
features = ["handlebars"]
